tests/integration/tests/check_commands/CHECK/failure/edge-case-no-newline/01-edge-case-no-newline-in-llvm/CHECK.itest
; RUN: printf "String1\n" | %expect_exit 1 %FILECHECK_EXEC "%S/CHECK.check" | %FILECHECK_EXEC "%s"

; CHECK: {{.*}}CHECK.check:2:8: error: CHECK: expected string not found in input
; CHECK: CHECK: String2
; CHECK:        ^
; CHECK: <stdin>:2:1: note: scanning from here
; CHECK-EMPTY:
; CHECK: ^
; CHECK-EMPTY:
